# reader_using_class

./: README.md  pyproject.toml
data/csv_files/: 1.csv  2.csv
lib/classes/: AbstractDataSource.py
src/: main.py
src/lib/classes/: AbstractDataSource.py  CsvSources.py  FilesSources.py  TxtSources.py
