[project]
name = "reader-using-class"
version = "0.1.0"
description = ""
authors = [
    {name = "Marcelo Augusto",email = "marcelo.augusto.453@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "schedule (>=1.2.2,<2.0.0)",
    "pandas (>=2.3.2,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
